--- a/config/database.yml
+++ b/config/database.yml
@@ -1,34 +1,46 @@
 # SQLite version 3.x
 #   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
-    adapter: mysql #or sqlite3
-    database: ready_to_go_dev #or db/development.sqlite3
-    pool: 5
-    timeout: 5000
-    #encoding: utf8
-    #username: 
-    #password: 
+    #adapter: sqlite3
+    #database: db/development.sqlite3
+    #pool: 5
+    #timeout: 5000
+    
+    adapter: mysql
+    database: ready_to_go_dev
+    encoding: utf8
+    username: 
+    password: 
     #socket: /tmp/mysql.sock
+    # pool: 5
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-    adapter: mysql #or sqlite3
-    database: ready_to_go_test #or db/development.sqlite3
-    pool: 5
-    timeout: 5000
-    #encoding: utf8
-    #username: 
-    #password: 
+    #adapter: sqlite3
+    #database: db/test.sqlite3
+    #pool: 5
+    #timeout: 5000
+    
+    adapter: mysql
+    database: ready_to_go_test
+    encoding: utf8
+    username: 
+    password: 
     #socket: /tmp/mysql.sock
+    # pool: 5
 
 production:
-    adapter: mysql #or sqlite3
-    database: ready_to_go #or db/development.sqlite3
-    pool: 5
-    timeout: 5000
-    #encoding: utf8
-    #username: 
-    #password: 
+    #adapter: sqlite3
+    #database: db/production.sqlite3
+    #pool: 5
+    #timeout: 5000
+    
+    adapter: mysql
+    database: ready_to_go
+    encoding: utf8
+    username: 
+    password: 
     #socket: /tmp/mysql.sock
+    # pool: 5
